--- a/chatgpt_api_connect.ipynb
+++ b/chatgpt_api_connect.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = \"sk-gp2TUTbHK4FBBBUU6K-n2T3Blbk-FJv91O65QI0HBVqTmQuZlb\""
+    "openai.api_key = \"**\""
    ]
   },
   {
