--- a/chatgpt_python.ipynb
+++ b/chatgpt_python.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = 'sk-gp2TUTbHK4FBBBUU6-Kn2T3BlbkF-Jv91O65QI0HBVqTmQuZlb'"
+    "openai.api_key = '**'"
    ]
   },
   {
