--- a/gpt_model.ipynb
+++ b/gpt_model.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = '**'"
    ]
   },
   {
