--- a/chatgpt_integration.ipynb
+++ b/chatgpt_integration.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = 'sk-gp2TUTbHK4FBBBUU6Kn-2T3BlbkFJ-v91O65QI0HBVqTmQuZlb'"
+    "openai.api_key = '**'"
    ]
   },
   {
@@ -31,23 +31,7 @@
     "]"
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'messages' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\ail02\\Documents\\April 2023\\gpt_test3.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m content \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mUser: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m messages\u001b[39m.\u001b[39mappend({\u001b[39m\"\u001b[39m\u001b[39mrole\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m: content})\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m completion \u001b[39m=\u001b[39m openai\u001b[39m.\u001b[39mChatCompletion\u001b[39m.\u001b[39mcreate(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   model\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgpt-3.5-turbo\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m   messages\u001b[39m=\u001b[39mmessages\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ail02/Documents/April%202023/gpt_test3.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m chat_response \u001b[39m=\u001b[39m completion\u001b[39m.\u001b[39mchoices[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mmessage\u001b[39m.\u001b[39mcontent\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'messages' is not defined"
-     ]
-    }
-   ],
+  
    "source": [
     "content = input(\"User: \")\n",
     "messages.append({\"role\": \"user\", \"content\": content})\n",
